--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
-  --dark-body: #d7fef2;
+  --dark-body: #111111;
   --light-body: #fafbff;
 }
-
+.light {
+  background-color: var(--light-body);
+  color: black;
+}
+.dark {
+  background-color: var(--dark-body);
+  color: white;
+}
 body {
-  background-color: red;
   margin: 0;
   font-family: "Poppins", sans-serif, -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
